      to scanBam and scanTabix return successive yieldSize chunks of
      the file. readBamGappedAlignments, VariantAnnotation::readVcf
      automatically gain support for yield'ing through files.

BUG FIXES

    o close razip, bgzip files when done

    o bamReverseComplement<- failed to return the updated object

    o scanBcfHeader works on remote files

CHANGES IN VERSION 1.8.0
------------------------

NEW FEATURES

    o Add readBamGappedAlignmentPairs() (plus related utilities
      findMateAlignment() and makeGappedAlignmentPairs()) to read a BAM
      file into a GappedAlignmentPairs object.

SIGNIFICANT USER-VISIBLE CHANGES

    o update samtools to github commit
      dc27682f70713a70d4f31bca652cf78e00757da2

    o Add 'bitnames' arg to bamFlagAsBitMatrix() utility.

    o By default readBamGappedAlignments() and readBamGappedReads() don't
      drop PCR or optical duplicates anymore.

BUG FIXES

    o readBamGappedAlignments handles empty 'tag' fields

    o scanTabix would omit variants overlapping range ends

    o scanFa would segfault on empty files or empty ids

CHANGES IN VERSION 1.6.0
------------------------

NEW FEATURES

    o TabixFile, indexTabix, scanTabix, yieldTabix index (sorted,
    compressed) and parse tabix-indexed files

    o readBamGappedReads(), bamFlagAsBitMatrix(), bamFlagAND()

    o Add use.names and param args to readBamGappedAlignments(); dropped
    which and ... args.

    o PileupFiles, PileupParam, applyPileup for visiting several BAM
    files and calculating pile-ups on each.

    o Provide a zlib for Windows, as R does not currently do this

    o BamFileList, BcfFileList, TabixFileList, FaFileList clases
    extend IRanges::SimpleList, for managings lists of file references 

    o razfFa creates random access compressed fasta files.

    o count and scanBam support input of larger numbers of records; 
    countBam nucleotide count is now numeric() and subject to rounding
    error when large.
